<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/plant_has_seed_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/has_seed_number"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="23dp"
        />
    <LinearLayout
        android:id="@+id/plant_seed_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/plant_has_seed_text"
        app:layout_constraintBottom_toTopOf="@id/plant_plant_btn"
        android:orientation="vertical"
        android:gravity="center"
        >
        <ImageView
            android:id="@+id/plant_seed_img"
            android:layout_width="100dp"
            android:layout_height="0dp"
            android:layout_weight="1"

            android:layout_marginBottom="9dp"
            />
        <TextView
            android:id="@+id/plant_seed_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginBottom="12dp"
            />
        <TextView
            android:id="@+id/plant_seed_price_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:text="@string/plant_price_seed"
            android:layout_marginBottom="21dp"
            />
        <TextView
            android:id="@+id/plant_seed_to_flower_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:text="@string/flower_open_time"
            android:layout_marginBottom="5dp"
            />
        <TextView
            android:id="@+id/plant_seed_grow_up_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:text="@string/glow_up_time"
            android:layout_marginBottom="5dp"
            />
        <TextView
            android:id="@+id/plant_seed_reward_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:text="@string/plant_reward"
            android:layout_marginBottom="5dp"
            />

    </LinearLayout>
    <TextView
        android:id="@+id/plant_plant_btn"
        android:layout_width="257dp"
        android:layout_height="62dp"
        android:text="@string/plant"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/plant_seed_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/pink_view_radius_16"
        android:elevation="0dp"
        android:layout_marginVertical="35dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>