<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:layout_marginHorizontal="35dp"
    android:background="@drawable/white_calendar_view_radius_21"
    >
    <TextView
        android:id="@+id/dialog_goal_question_head_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_write_goal"
        android:textColor="@color/text_color"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="13dp"
        />
    <TextView
        android:id="@+id/dialog_goal_question_head_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_achive_by_goal"
        android:textColor="@color/text_color"
        android:textSize="11sp"
        android:layout_marginBottom="22dp"
        tools:ignore="SmallSp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/dialog_goal_question_no_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/yellow_view_left_btm_radius_21"
            android:gravity="center"
            android:paddingVertical="15dp"
            android:layout_marginEnd="2dp"
            android:text="@string/stay"
            android:textColor="@color/text_color_in_tab" />

        <TextView
            android:id="@+id/dialog_goal_question_yes_btn"
            android:background="@drawable/yellow_view_right_btm_radius_21"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingVertical="15dp"
            android:gravity="center"
            android:text="@string/change"
            android:textColor="@color/text_color_in_tab"
            />

    </LinearLayout>

</LinearLayout>