<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:gravity="center_horizontal">
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:paddingHorizontal="22dp"
        android:layout_marginTop="70dp"
        >
        <EditText
            android:id="@+id/email_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:theme="@style/EditTextTheme"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="8dp"
            android:hint="@string/email_address"
            android:textCursorDrawable="@color/black"
            android:textSize="15sp"
            android:textColorHint="@color/text_color"
            />



    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:paddingHorizontal="22dp"
        >
        <EditText
            android:id="@+id/password_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:theme="@style/EditTextTheme"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="8dp"
            android:textCursorDrawable="@color/black"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="15sp"
            android:textColorHint="@color/text_color"
            />



    </RelativeLayout>
    <TextView
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="22dp"
        android:paddingVertical="13dp"
        android:text="@string/log_in"
        android:textSize="18sp"
        android:textColor="@color/text_color_in_tab"
        android:alpha="0.6"
        android:clickable="false"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/yellow_view_radius_16"
        android:elevation="0dp"
        android:layout_marginVertical="20dp"
        />
    <TextView
        android:id="@+id/forget_password_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="11sp"
        android:textColor="@color/text_color_nonactive"
        android:text="@string/forget_password"
        tools:ignore="SmallSp"
        android:layout_marginBottom="10dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingHorizontal="22dp"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="1px"
            android:background="#D6D6D6"
            android:layout_weight="1"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textColor="@color/text_color_nonactive"
            android:textSize="11sp"
            android:layout_marginHorizontal="4dp"
            tools:ignore="SmallSp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="1px"
            android:background="#D6D6D6"
            android:layout_weight="1"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/logon_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="22dp"
        android:paddingVertical="13dp"
        android:text="@string/logon"
        android:textSize="18sp"
        android:textColor="@color/text_color"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/yellow_stroke_view_radius_16"
        android:elevation="0dp"
        android:layout_marginVertical="20dp"
        />
    

</LinearLayout>