<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:layout_marginHorizontal="35dp"
    android:background="@drawable/white_calendar_view_radius_21"
    >
    <TextView
        android:id="@+id/dialog_buying_question_second_head_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remove_it"
        android:textColor="@color/text_color"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="13dp"
        />
    <TextView
        android:id="@+id/dialog_buying_question_second_head2_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_in_seed_warehouse"
        android:textColor="@color/text_color"
        android:textSize="11sp"
        android:layout_marginBottom="22dp"
        tools:ignore="SmallSp" />


        <TextView

            android:id="@+id/dialog_buying_question_second_close_btn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/yellow_view_btm_radius_21"
            android:gravity="center"
            android:paddingVertical="15dp"
            android:text="@string/close"
            android:textColor="@color/text_color_in_tab" />




</LinearLayout>