<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:layout_marginHorizontal="35dp"
    android:background="@drawable/white_calendar_view_radius_21"
    >
    <TextView
        android:id="@+id/seed_plant_dialog_text_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test"
        android:textColor="@color/text_color"
        android:textSize="15sp"
        android:layout_marginVertical="50dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/seed_plant_dialog_no_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/yellow_view_left_btm_radius_21"
            android:gravity="center"
            android:paddingVertical="15dp"
            android:layout_marginEnd="2dp"
            android:text="@string/no"
            android:textColor="@color/text_color_in_tab" />

        <TextView
            android:id="@+id/seed_plant_dialog_yes_btn"
            android:background="@drawable/yellow_view_right_btm_radius_21"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingVertical="15dp"
            android:gravity="center"
            android:text="@string/yes"
            android:textColor="@color/text_color_in_tab"
            />

    </LinearLayout>

</LinearLayout>