<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.37"
        >
        <TextView
            android:id="@+id/minute_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="47sp"
            android:text="@string/test"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="47sp"
            android:text="@string/time_divider"
            />
        <TextView
            android:id="@+id/second_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="47sp"
            android:text="@string/test"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/tiemr_pause_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginStart="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.68"
        >
        <ImageView
            android:id="@+id/timer_stop_btn"
            android:layout_width="79dp"
            android:layout_height="79dp"
            android:src="@drawable/ic_timer_stop"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timer_stop"
            android:layout_marginTop="17dp"
            android:textSize="15sp"
            />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/tiemr_start_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginStart="30dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.68"
        >
        <ImageView
            android:id="@+id/timer_start_btn"
            android:layout_width="79dp"
            android:layout_height="79dp"
            android:src="@drawable/ic_timer_continue"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/continued"
            android:layout_marginTop="17dp"
            android:textSize="15sp"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginEnd="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.68"
        >
        <ImageView
            android:id="@+id/timer_finish_btn"
            android:layout_width="79dp"
            android:layout_height="79dp"
            android:src="@drawable/ic_timer_finish"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timer_finish"
            android:layout_marginTop="17dp"
            android:textSize="15sp"
            />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>